# villa

./: .gitignore  .gitmodules  AGENTS.md  README.md
foundation/scroll-unwrap-pipeline/: .gitignore  README.md  pyproject.toml
ink-detection/: data.py  ensemble_train_resnet3d.py  group_dro.py  inference_dino_transformer.py  inference_ome_zarr.py  inference_resnet3d_3d_decoder.py  inference_resnet3d_full.py  inference_resnet_full3d.py  inference_timesformer.py  main.py  metadata.json  model_distillation.py  pyproject.toml  readme.md  requirements.txt  run_per_group_erm.py  samplers.py  stitch_train_resnet3d.py  sweep_erm_ablations.yaml  sweep_erm_group_balanced.yaml  sweep_erm_hparams_group_balanced_accum1.yaml  sweep_erm_hparams_group_balanced_accum4.yaml  sweep_erm_hparams_shuffle_accum1.yaml  sweep_erm_hparams_shuffle_accum4.yaml  sweep_erm_hparams_stratified_accum1.yaml  sweep_erm_hparams_stratified_accum4.yaml  sweep_groupdro_ablation.yaml  sweep_groupdro_lr.yaml  timesformer_pytorch_model.py  train_dino_transformer.py  train_resnet3d.py  train_resnet3d_3d_decoder.py  train_resnet3d_full_3d.py  train_timesformer_og.py  wk_training_preparation.py
ink-detection/configs/: ps256_3d_bcedice_dinoguided.json  ps256_3d_bcedice_dinoguided_v2.json  ps256_3d_bcedice_dinoguided_v3.json  ps256_3d_bcedice_dinoguided_v3_fullsup.json
ink-detection/embedding/: config.json  config_resnet.json  dataset.py  dump_unshuffled_dataset.py  evaluate_embedding_neighbors_preferences.py  model.py  prepare_2um_labels.py  prepare_dls_labels.py  show_neighbors.py  train.py  train_pca.py
ink-detection/ink-detection/: requirements.txt
ink-detection/metrics/: __init__.py  binary_segmentation.py  embedding_neighbors.py  stitched_components.py  stitched_metric_specs.py  stitched_metrics.py  stitched_primitives.py  textseg_metrics.py
ink-detection/optimized_inference/: Dockerfile  PR899_HUMAN_EVALUATION.md  PR899_REVIEWER_REPLY_DRAFT.md  README.md  __init__.py  config.py  entrypoint.py  inference.py  inference_timesformer.py  main.py  model_primus.py  model_resnet3d.py  model_resnet3d_3d_decoder.py  prepare_test_data.py  processing.py  profiling.py  pyproject.toml  requirements.txt  runtime_contracts.py  server.py  smoke_primus_docker.sh  start_server.py  utils.py
ink-detection/orchestrator_server/: .dockerignore  Dockerfile  README.md  argo_client.py  config.py  main.py  model_registry.py  pyproject.toml  requirements.txt  s3_utils.py  schemas.py
ink-detection/preprocessing/: __init__.py  clean_labels.py  create_2d_zarr.py  create_label_zarrs.py  download_required_zarr_chunks.py  flip_patch_assets.py  validate_segment_shapes.py  validate_segments.py
ink-detection/scripts/: run_per_group_erm.py
ink-detection/tests/: test_script_utils.py  test_tifxyz_label_helpers.py  test_tifxyz_sample_exporter.py
ink-detection/tifxyz_dataset/: README.md  augmentation.py  build_betti.py  common.py  example_config.json  example_config_flat.json  example_creds.json  export_samples.py  flat_ink_dataset.py  losses.py  patch_finding.py  stitching.py  sweep_runner.py  tifxyz_dataset.py  train.py
ink-detection/train_resnet3d_lib/: README.md  __init__.py  config.py  config_metadata_apply.py  data_ops.py  dataloaders.py  datasetes_builder.py  datasets_builder.py  embedding_loss.py  legacy_segment_adapter.py  model.py  orchestration.py  script_utils.py  segment_metadata_parser.py  stitch_manager.py  training.py  val_stitch_wandb.py  wandb_local_metrics.py
ink-detection/utils/: chop_and_stack.py
lasagna/dense_batch_min_cut/: CMakeLists.txt  README.md
vc3d-web/: CMakeLists.txt  PLAN.md  build.sh  index.html
vc3d-web/src/: RenderCore_wasm.cpp  chunk_cache.hpp  main.cpp  renderer.cpp  renderer.hpp
volume-cartographer/: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  MCP_SERVER_PLAN.mc  README.md  alpine.Dockerfile  build_from_src_debian.sh  ffmpeg_8.0.1-3ubuntu2.debian.tar.xz  ffmpeg_8.0.1-3ubuntu2.dsc  libde265_1.0.16-1build1.debian.tar.xz  libde265_1.0.16-1build1.dsc  openh264_2.6.0+dfsg-2build1.debian.tar.xz  openh264_2.6.0+dfsg-2build1.dsc  openh264_2.6.0+dfsg.orig.tar.xz  pyproject.toml  ubuntu-24.04-noble.Dockerfile  ubuntu-26.04.Dockerfile  vc3d_volume_cache_scheduler_plan.md  vcpkg.json  x264_0.165.3222+gitb35605ac-3build1.debian.tar.xz  x264_0.165.3222+gitb35605ac-3build1.dsc
volume-cartographer/apps/: CMakeLists.txt
volume-cartographer/cmake/: FetchLibigl.cmake  GCCToolchain.cmake  LLVMToolchain.cmake  MacOSBundleInfo.plist.in  MacPackaging.cmake  VCCompilerFlags.cmake  VCFindDependencies.cmake  VCPgo.cmake  VCSanitizers.cmake  VCToolchain.cmake  VCWarnings.cmake  WindowsPackaging.cmake
volume-cartographer/core/: CMakeLists.txt
volume-cartographer/docs/: atlas_implementation.md  extending_and_modifying_segmentations.md  fiber_intersections.md  intersections-rendering.md  overlay_system.md  seg-editing-technical-doc.md  segmentation-editing.md  segmentation.md  tracing.md
volume-cartographer/libvc/: CMakeLists.txt  cache.hpp  codec.hpp  compositing.hpp  hash.hpp  json.cpp  json.hpp  lock_pool.hpp  lru_cache.hpp  shard.hpp  thread_pool.hpp  types.hpp  volume.hpp
volume-cartographer/misc/: sanitizer_config.c  sanitizer_config.cpp
volume-cartographer/python/: CMakeLists.txt  lasagna_amgx_bindings.cpp  vc_surface_index.cpp
volume-cartographer/scripts/: Dockerfile.appimage  batch_obj2tifxyz_legacy.sh  batch_objrefine.sh  batch_seg_add_overlap.sh  build_appimage.sh  build_dependencies.sh  build_macos.sh  build_python_bindings.py  ci.sh  dead-code-analysis.sh  download_minimal_volpkg.sh  ec2_setup.sh  fromscratch.sh  h264-zarr-only.sh  install_build_deps.sh  pgo_build.sh  profile-build.sh  recompress_zarr.py  repair_tifxyz_spacing.py  run_lasagna_point_strip.py  setup_sudo.sh  setup_user.sh  test_delta_compression.py  transform_fiber_labels.py  vc3d_aws_setup.sh  vc_sync.py  verify_homebrew_toolchain.sh  zarr_recompress_avif.py
volume-cartographer/tools/: measure_mask_bbox.py  recompress_coordinator.py
volume-cartographer/triplets/: x64-windows-rel.cmake
(+2952 files in other folders)
