[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "koine_machines"
version = "0.1.0"
description = "Machine learning package for ink detection on herculaneum scrolls"
requires-python = ">=3.11"
dependencies = [
    "vesuvius",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "timm==1.0.25",
    "numpy<=2.2",
    "scipy==1.17.1",
    "zarr==2.18.7",
    "numcodecs==0.15.1",
    "albumentations==2.0.8",
    "opencv-contrib-python-headless==4.11.0.86",
    "pillow==12.1.1",
    "PyYAML==6.0.3",
    "wandb==0.25.1",
    "tqdm==4.67.3",
    "diffusers>=0.37.0",
    "accelerate>=1.13.0",
    "numba>=0.64.0",
    "tifffile>=2026.3.3",
    "imagecodecs>=2026.3.6",
    "pytest>=9.0.2",
    "napari>=0.7.0",
    "einops>=0.8.2",
    "pyqt6>=6.10.2",
    "pytorch-optimizer>=3.10.0",
    "connected-components-3d>=3.26.1",
]

[tool.setuptools.packages.find]
include = ["koine_machines*"]

[tool.uv.sources]
vesuvius = { path = "../vesuvius", editable = true }
